# csv_agent

./: .gitignore  README.md
.windsurf/rules/: rules.md
Streamlit/: agent_bridge.py  app.py  output_handler.py  requirements.txt
rag_agent/: get_fields_names.py  pyproject.toml
rag_agent/knowledge/: ub04_claims.csv
rag_agent/src/rag_agent/: crew.py  main.py  models.py
rag_agent/src/rag_agent/config/: agents.yaml  tasks.yaml
rag_agent/src/rag_agent/tools/: csv_tool.py  pdf_tool.py
