[project]
name = "rag_agent"
version = "0.1.0"
description = "rag_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.47.1",
    "crewai[tools]>=0.130.0,<1.0.0",
    "fastembed>=0.7.1",
    "fpdf>=1.7.2",
    "opik>=1.7.36",
    "pymupdf>=1.26.1",
]
 
[project.scripts]
rag_agent = "rag_agent.main:run"
run_crew = "rag_agent.main:run"
train = "rag_agent.main:train"
replay = "rag_agent.main:replay"
test = "rag_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
